--- a/borodist/css/main.css
+++ b/borodist/css/main.css
@@ -1,17 +1,17 @@
 *::-webkit-input-placeholder {
-	color: #666;
+color: #bdaaa4;
 	opacity: 1;
 }
 *:-moz-placeholder {
-	color: #666;
+color: #bdaaa4;
 	opacity: 1;
 }
 *::-moz-placeholder {
-	color: #666;
+color: #bdaaa4;
 	opacity: 1;
 }
 *:-ms-input-placeholder {
-	color: #666;
+color: #bdaaa4;
 	opacity: 1;
 }
 
@@ -39,9 +39,10 @@ body {
 	 font-family: 'OzHandicraft WGL4 BT Roman', arial;
 	font-size: 16px;
 	background: url("../img/main_bg.png") no-repeat 50%;
-	-webkit-background-size: 100% auto;
-	background-size: 100% auto;
+	-webkit-background-size: cover;
+	background-size: cover;
 	min-height: 3000px;
+	position: relative;
 }
 .button{
 	display: block;
@@ -265,7 +266,7 @@ vertical-align: top;
 	padding-top: 90px;
 }
 .why{
-	padding-bottom: 180px;
+	padding-bottom: 100px;
 }
 .people h5{
   font-size: 34px;
@@ -717,5 +718,206 @@ opacity:1;
 	background-color: #8893aa;
 }
 .header__next{
+	cursor: pointer;
+}
+
+.bg_modal{
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 8000;
+	background: rgba(71,83,104,0.7);
+	display: none;
+	-webkit-transition: all 0.8s ease-in;
+	-o-transition: all 0.8s ease-in;
+	transition: all 0.8s ease-in;
+}
+.bg_modal.active{
+	display: block;
+	-webkit-transition: all 0.8s ease-in;
+	-o-transition: all 0.8s ease-in;
+	transition: all 0.8s ease-in;
+}
+.modal{
+	width: 900px;
+	height: 700px;
+	z-index: 8100;
+	position: fixed;
+	top: 100px;
+	background: url("../img/modal_bg.png") no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+	left: 50%;
+	margin-left: -450px;
+	padding-top: 50px;
+	padding-left: 70px;
+	padding-right: 80px;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all 1s ease-in;
+	-o-transition: all 1s ease-in;
+	transition: all 1s ease-in;
+}
+.modal.active{
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: all 1s ease-in;
+	-o-transition: all 1s ease-in;
+	transition: all 1s ease-in;
+}
+.modal h2{
+	width: 620px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height: 130px;
+	background: url("../img/h2_modal_bg.png") no-repeat;
+	-webkit-background-size: 100% auto;
+	background-size: 100% auto;
+	margin-bottom: 40px;
+}
+.modal p{
+  font-size: 31px;
+  color: rgb(116, 93, 86);
+  line-height: 1.613;
+  text-align: left;
+  letter-spacing: 0.05em;
+}
+.modal_input{
+	background: none;
+	border: none;
+	border-bottom: 2px solid #6c4f46;
+	padding: 0;
+	line-height: 1.2;
+	margin-left: 5px;
+	margin-right: 5px;
+	  color: rgb(116, 93, 86);
+}
+.modal .opt{
+  font-size: 35px;
+  color: rgb(116, 93, 86);
+  line-height: 1.429;
+text-align: left;
+margin-top: 30px;
+}
+.modal .opt +p{
+  font-size: 25px;
+  color: rgb(116, 93, 86);
+  line-height: 1.2;
+}
+
+.modal label{
+	width: 180px;
+	background-color: rgb(232, 219, 215);
+	border-width: 3px;
+	border-color: rgb(206, 189, 184);
+  border-style: solid;
+	height: 55px;
+	border-radius: 27px;
+	position: relative;
+	display: block;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	height: 0px;
+	border-width: 0px;
+	overflow: hidden; -webkit-transition: all 1s ease-in;
+	-o-transition: all 1s ease-in;
+	transition: all 1s ease-in;
+
+
+}
+.modal label p{
+  font-size: 24px;
+  font-family: "Dobro";
+  color: rgb(108, 79, 70);
+  text-transform: uppercase;
+  line-height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  font-style: italic;
+
+}
+input[type="radio"] {
+    display: none;
+}
+.for_item{
+	display: none;
+	width: 20px;
+	height: 15px;
+	text-align: right;
+	background: url("../img/for_item.png") no-repeat;
+	position: absolute;
+	top: 18px;
+	right: 18px;
+}
+input[type="radio"]:checked + label{
+	height: 55px;
+	border-width: 3px;
+}
+input[type="radio"]:checked + label .for_item {
+    display: block;
+}
+
+.modal label.selecting{
+border-width: 3px;
+height: 55px;
+-webkit-transition: all 1s ease-in;
+-o-transition: all 1s ease-in;
+transition: all 1s ease-in;
+
+}
+#label2.selecting{
+	background: url("../img/selecting.png") no-repeat 0px 50%;
+	background-color: transparent;
+	border-width: 0px;
+	height: 60px;
+	-webkit-background-size: 100% auto;
+	background-size: 100% auto;
+	padding: 10px;
+}
+#label2.selecting .for_item{
+	top: 28px;
+}
+.modal button{
+  border-width: 3px;
+  border-color: rgb(108, 79, 70);
+  border-style: solid;
+  background-image: -moz-linear-gradient( 90deg, rgb(150,120,109) 0%, rgb(183,143,122) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(150,120,109) 0%, rgb(183,143,122) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(150,120,109) 0%, rgb(183,143,122) 100%);
+
+  width: 307px;
+  height: 62px;
+  border-radius: 31px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.modal button p{
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  line-height: 1.2;
+  text-align: center;
+  text-shadow: 1.5px 2.598px 0px rgba(108, 79, 70, 0.004);
+	letter-spacing: 0.1em;
+}
+.modal button:hover{
+	background: #b68f7a;
+}
+.select_div{
+	height: 100px;
+}
+.cross{
+	display: block;
+	position: absolute;
+	top: 40px;
+	right: 40px;
+	width: 41px;
+	height: 41px;
+	background: url("../img/cross.png") no-repeat;
 	cursor: pointer;
 }
