--- a/portovideo/css/main.css
+++ b/portovideo/css/main.css
@@ -416,7 +416,7 @@ footer .col-xs-10 p{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 325px;
+	width: 335px;
 	border-bottom: 2px solid #8B763D;
 }
 section.menu h2{
@@ -572,4 +572,223 @@ header .container{
 }
 .gallery{
 	background: rgba(1,6,28,0.01);
+}
+.to_menu, .to_reserve, .to_galery, .to_contacts{
+	cursor: pointer;
+}
+.see{
+	width: 200px;
+	height: 50px;
+	border:2px solid rgb(1,6,28);
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40px;
+	z-index: 9999;
+	position: relative;
+	padding-top: 5px;
+	text-align: center;
+	cursor: pointer;
+}
+.see:hover{
+	background: rgb(1,6,28);
+}
+.see:hover p{
+	color: #fff;
+}
+.opac{
+	transition: all 1s ease-in;
+}
+.see p{
+	font-family: "Gabriola";
+	font-size: 28px;
+	color: rgb(1,6,28);
+}
+.next{
+	position: absolute;	
+	display: block;
+	width: 200px;
+	text-align: center;
+	left: 50%;
+	margin-left: -100px;
+	bottom: 30px;
+		z-index: 6000;
+		cursor: pointer;
+}
+.next p{
+	color: #fff;
+	font-size: 24px;
+}
+
+.is-sticky .logo{
+	width: 50px;
+	margin-top: 0;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+
+
+.menu__header{
+	background: url("../img/menu__bg.png") no-repeat 50%;
+	-webkit-background-size: 	cover;
+	background-size: 	cover;
+}
+
+
+
+
+#wheel{
+	width: 40px;
+	height: 40px;
+	fill: #01061C;
+	cursor: pointer;
+	transition: fill 0.1s linear;
+	transition: transform 2s ease-in;
+}
+.wheel.wh #wheel{
+	fill: #fff;
+	transform: rotate(360deg);
+}
+.wheel{
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+	padding-top: 10px;
+	vertical-align: top;
+	padding-left: 10px;
+	background: #F9FAFB;
+
+}
+.wheel.wh{
+	background: transparent;
+	transition: background 1s ease-in;
+}
+.menu__wrap{
+height: 60px;
+width: 1150px;
+
+}
+.menu__content{
+width: 1050px;
+display: inline-block;
+vertical-align: top;
+}
+.menu__content ul{
+	display: none;
+	margin-left: 0;
+	padding-left: 0;
+	width: 80px;
+	width: 100%;
+}
+.menu__content ul.active{
+	display: block;
+}
+.menu__content ul li{
+	display: inline-block;
+	vertical-align: middle;
+	width: 24%;
+	text-align: center;
+	margin: 0;
+}
+.menu__content ul li a{
+	font-family: "Century";
+	text-transform: uppercase;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	vertical-align: middle;
+}
+.viewp{
+	width: 60px;
+	height: 60px;
+	overflow: hidden;
+	background: transparent;
+	transition: 2s all ease-in;
+	background: url("../img/sticky__bg.png") no-repeat;
+	-webkit-background-size: 100% 100%;
+	background-size: 100% 100%;
+}
+.viewp.active{
+	width: 1170px;
+	transition: 2s width ease-in;
+}
+.sticky__menu{
+	z-index: 2000;
+}
+
+.some__information h3{
+	font-family: "Romana";
+	text-align: center;
+	font-size: 35px;
+	margin-bottom: 50px;
+	display: block;
+	line-height: 1;
+	width: 385px;margin-left: auto;
+	margin-right: auto;
+	border-bottom: 1px solid #8B763D;
+}
+.some__information .col-md-8{
+	padding-left: 0;
+	padding-right: 0;
+}
+.some__information p{
+	font-size: 22px;
+	color: #01061C;text-align: left;
+}
+table{
+	width: 700px;
+}
+table tr{
+	border-bottom: 1px dotted #8B763D;
+}
+table tr td{
+	padding-bottom: 10px;
+	padding-left: 15px;
+	padding-top: 10px;
+	font-size: 24px;
+}
+.main__menu__fish{
+	padding-top: 150px;
+}
+h5{
+	font-family: "Semilia";
+	font-size: 28px;
+	margin-bottom: 30px;
+}
+h4{
+	font-family: "Romana";
+	font-size: 34px;
+	text-align: center;
+	margin-bottom: 50px;
+}
+.main__menu__fish img{
+	display: block;
+	width: 100%;
+	height: auto;
+}
+.various{
+	display: block;
+	margin-top: 40px;
+	border: 1px dotted rgba(139,118,61, 0.6);
+	width: 100%;
+	padding: 15px;
+
+}
+.various>p{
+	font-family: "Century";
+	font-weight: bold;
+	font-size: 24px;
+}
+.various li{
+	font-size: 20px;
+	font-family: "Century";
+	font-weight: 500;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+.main__menu__fish .container{
+	padding-top: 30ex;
+	padding-bottom: 30px;
 }
